re-enable tests for sdo databinding plugin
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>